feat: Implement gRPC communication for cart and product services, including initial cart service adapters and deployment setup.